# sd-18-slamtown

./: README.md  TODO.txt  arduinoCommands.py  arduinoControl.py  index.html  servosweep.ino
OpenCV_Test/OpenCV_Test/: test.cpp
client/: client.py  received_file  thermal_client.py
client/Images/: info.txt
gwu_sd_team-sample_apps-33a924de0c90/: README
gwu_sd_team-sample_apps-33a924de0c90/IR_streamer/Common/: streamer.h
gwu_sd_team-sample_apps-33a924de0c90/IR_streamer/IR_raspberry_server/: LeptonAPI.cpp  LeptonAPI.h  LeptonUtils.cpp  LeptonUtils.h  README  StreamerServer.cpp
gwu_sd_team-sample_apps-33a924de0c90/IR_streamer/IR_video_streamer_client/: .cproject  .project
gwu_sd_team-sample_apps-33a924de0c90/IR_streamer/IR_video_streamer_server/: .cproject  .project
gwu_sd_team-sample_apps-33a924de0c90/live_adv_plant_segmentation/: CMakeLists.txt  live_adv_plant_segmentation.cpp
gwu_sd_team-sample_apps-33a924de0c90/live_capture/: CMakeLists.txt  live_capture.cpp
gwu_sd_team-sample_apps-33a924de0c90/live_plant_segmentation/: CMakeLists.txt  live_plant_segmentation.cpp
gwu_sd_team-sample_apps-33a924de0c90/live_segmentation/: CMakeLists.txt  README.txt
gwu_sd_team-sample_apps-33a924de0c90/live_segmentation/cmake/Modules/: PCLConfig.cmake  PCLConfigVersion.cmake  VTKConfig.cmake  VTKTargets-release.cmake  VTKTargets.cmake
gwu_sd_team-sample_apps-33a924de0c90/live_segmentation/include/: prototyper_window.h  prototyper_window_qt.h
gwu_sd_team-sample_apps-33a924de0c90/live_segmentation/src/: main.cpp  prototyper_window.cpp
gwu_sd_team-sample_apps-33a924de0c90/network_communication/: client.cpp  server.cpp
gwu_sd_team-sensorfusion_rgbdt-ac3adc84011f/: CMakeLists.txt  README.md
gwu_sd_team-sensorfusion_rgbdt-ac3adc84011f/apps/: CMakeLists.txt
gwu_sd_team-sensorfusion_rgbdt-ac3adc84011f/apps/DatasetPlayer/: CMakeLists.txt  DatasetPlayer.cpp
gwu_sd_team-sensorfusion_rgbdt-ac3adc84011f/apps/DatasetPublisher/: CMakeLists.txt  DatasetPublisher.cpp  ProgramOptions.h
gwu_sd_team-sensorfusion_rgbdt-ac3adc84011f/apps/DatasetRegistration/: CMakeLists.txt  DatasetRegistration.cpp  ProgramOptions.h
gwu_sd_team-sensorfusion_rgbdt-ac3adc84011f/apps/DatasetSubscriber/: CMakeLists.txt  DatasetSubscriber.cpp  ProgramOptions.h
gwu_sd_team-sensorfusion_rgbdt-ac3adc84011f/apps/ThermalCalibration/: CMakeLists.txt  ThermalCalibration.cpp
gwu_sd_team-sensorfusion_rgbdt-ac3adc84011f/apps/ThermalModelPublisher/: CMakeLists.txt  ThermalModelPublisher.cpp
gwu_sd_team-sensorfusion_rgbdt-ac3adc84011f/apps/ThermalSensorAnalysis/: CMakeLists.txt  ThermalSensorAnalysis.cpp
gwu_sd_team-sensorfusion_rgbdt-ac3adc84011f/apps/ThermalViewer2D/: CMakeLists.txt  ThermalViewer2D.cpp
gwu_sd_team-sensorfusion_rgbdt-ac3adc84011f/apps/Viewer3D/: CMakeLists.txt  Viewer3D.cpp
gwu_sd_team-sensorfusion_rgbdt-ac3adc84011f/apps/Viewer5D/: CMakeLists.txt  Viewer5D.cpp
gwu_sd_team-sensorfusion_rgbdt-ac3adc84011f/apps/ViewerFusion/: CMakeLists.txt  ViewerFusion.cpp
gwu_sd_team-sensorfusion_rgbdt-ac3adc84011f/apps/ViewerKeyPatch/: CMakeLists.txt  ViewerKeyPatch.cpp
gwu_sd_team-sensorfusion_rgbdt-ac3adc84011f/apps/ViewerSkeleton/: CMakeLists.txt  ViewerSkeleton.cpp
gwu_sd_team-sensorfusion_rgbdt-ac3adc84011f/cmake/: third-party.cmake
gwu_sd_team-sensorfusion_rgbdt-ac3adc84011f/cmake/modules/: FindZMQ.cmake
gwu_sd_team-sensorfusion_rgbdt-ac3adc84011f/lib/: CMakeLists.txt
gwu_sd_team-sensorfusion_rgbdt-ac3adc84011f/lib/3DSensor/: CMakeLists.txt
gwu_sd_team-sensorfusion_rgbdt-ac3adc84011f/lib/3DSensor/include/3DSensor/: 3DSensor.h  KinectGrabber.h
gwu_sd_team-sensorfusion_rgbdt-ac3adc84011f/lib/3DSensor/src/: 3DSensor.cpp  KinectGrabber.cpp
gwu_sd_team-sensorfusion_rgbdt-ac3adc84011f/lib/ImageProcessing/: CMakeLists.txt
gwu_sd_team-sensorfusion_rgbdt-ac3adc84011f/lib/ImageProcessing/include/ImageProcessing/: ImageUtils.h
gwu_sd_team-sensorfusion_rgbdt-ac3adc84011f/lib/ImageProcessing/src/: ImageUtils.cpp
gwu_sd_team-sensorfusion_rgbdt-ac3adc84011f/lib/KeyPatch/: CMakeLists.txt
gwu_sd_team-sensorfusion_rgbdt-ac3adc84011f/lib/KeyPatch/include/KeyPatch/: KeyPatch.h
gwu_sd_team-sensorfusion_rgbdt-ac3adc84011f/lib/KeyPatch/src/: KeyPatch.cpp
gwu_sd_team-sensorfusion_rgbdt-ac3adc84011f/lib/MessagePassing/: CMakeLists.txt
gwu_sd_team-sensorfusion_rgbdt-ac3adc84011f/lib/MessagePassing/include/MessagePassing/: PublisherUtils.h
gwu_sd_team-sensorfusion_rgbdt-ac3adc84011f/lib/MessagePassing/src/: PublisherUtils.cpp
gwu_sd_team-sensorfusion_rgbdt-ac3adc84011f/lib/SensorFusion/: CMakeLists.txt
gwu_sd_team-sensorfusion_rgbdt-ac3adc84011f/lib/SensorFusion/include/SensorFusion/: SensorFusionRegistration.h  SensorFusionSync.h
gwu_sd_team-sensorfusion_rgbdt-ac3adc84011f/lib/SensorFusion/src/: SensorFusionRegistration.cpp  SensorFusionSync.cpp
gwu_sd_team-sensorfusion_rgbdt-ac3adc84011f/lib/ThermalSensor/: CMakeLists.txt
gwu_sd_team-sensorfusion_rgbdt-ac3adc84011f/lib/ThermalSensor/include/ThermalSensor/: FLIRGrabber.h  FLIRGrabberCommon.h  ThermalCalibration.h  ThermalSensor.h
gwu_sd_team-sensorfusion_rgbdt-ac3adc84011f/lib/ThermalSensor/src/: FLIRGrabber.cpp  ThermalCalibration.cpp  ThermalSensor.cpp
gwu_sd_team-sensorfusion_rgbdt-ac3adc84011f/lib/cxxopts/: CMakeLists.txt
motorControl/: motorControl.ino
server/: mytext.txt  server.py  test_server.py  thermal_server.py
src/: collectsamples.py  integrationtest.py
src/Color_Images/: src - Shortcut.lnk
src/Kinect/: KinectFrames.py  PyKinectBodyGame.py
src/ML/: ColorSVMTrain.py  Colorhog.xml  SVMTrain.py  ThermalSVMTrain.py  Thermalhog.xml  customSV.out  defaultSV.out
src/arduino/: ReadMe.md.txt  arduinoCommands.py
src/client/: Readme.md.txt  SVMTrain.py  peopledetect.py  thermal_client.py
src/kinect/: PyKinectFrameGrabber.py  Readme.md.txt
src/motorcontroller/: MotorControl.ino  README.md  Readme.md.txt
src/panorama-stitching/: README.md  panorama.py  stitch.py
src/panorama_stitching/: README.md  panorama.py  stitch.py  stitch_test.py
src/server/: Readme.md.txt  thermal_server.py
(+13 files in other folders)
